# dda

./: .Rbuildignore  .envrc  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  MIGRATION.md  NAMESPACE  README.md  cleanup  configure  default.nix  flake.nix  lon.nix  shell.nix
R/: 000-wrappers.R  ICS.R  anova.R  datasets.R  dd.R  density-fd-rust.R  density-mpl-legacy.R  density-mpl-rust.R  density-mpl.R  density.R  density.fd.R  density_estimation.R  eval.R  extendr-wrappers.R  fd.R  moments.R  mpl.R  operations.R  plot.R  zzz.R
data/: vietnam_provinces.rda  vietnam_provinces_north.rda  vietnam_regions.rda  vietnam_temperature_dd.rda
man/: ICS.Rd  ICS.dd.Rd  ICS.fd.Rd  ICS_outlier.Rd  ICS_outlier.default.Rd  as.fd.Rd  as.list.Rd  as.list.dd.Rd  as_dd.Rd  c.Rd  center.Rd  cov.Rd  cov.dd.Rd  cov.default.Rd  dd.Rd  dd_eval.Rd  dda-package.Rd  density.default.Rd  density.fd.Rd  density_fd_rust.Rd  density_kernel.Rd  density_mpl.Rd  density_mpl_legacy.Rd  density_mpl_rust.Rd  eval.dd.Rd  eval.default.Rd  eval_funs.Rd  gmean.Rd  gmean.dd.Rd  inprod.dd.Rd  mean.Rd  mean.dd.Rd  mean_dd.Rd  merge.dd.Rd  normalize.Rd  operations.Rd  plot.Rd  plot.dd.Rd  plot_funs.Rd  plot_matrix.Rd  (+10 more)
src/: Makevars  Makevars.in  Makevars.win  dda-win.def  entrypoint.c  init.c
src/rust/: Cargo.toml  api.h
src/rust/src/: basis.rs  density.rs  ffi.rs  lib.rs  mat.rs  romberg.rs
tests/: testthat.R
vignettes/: ANOVA.Rmd  DANOVA.RData  DANOVA.qmd  DANOVA_6.RData  DANOVA_6.qmd  DANOVA_new.qmd  ICS.Rmd  ICS.qmd  ICS_grid.Rmd  (+18 more)
vignettes-old/: ANOVA.Rmd  ics_gaussian_mixture.Rmd  spanish_weather.Rmd
(+4 files in other folders)
