[package]
name = "dda"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "dda"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
# `unwind` so R CMD check doesn't flag the binary for calling `abort`
# (CRAN policy disallows compiled code that may terminate R).
panic = "unwind"

[dependencies]
savvy = "0.10"
